[package]
name = "learn_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
futures = "0.3.24"
tokio = { version = "1.21.2", features = ["full"] }
mini-redis = "0.4"
bytes = "1"
crossbeam = "0.8"